<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">BibliotecaApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_btn_novo">Novo</string>
    <string name="main_btn_deletar">Deletar</string>
    <string name="main_btn_consultar">Consultar</string>
    <string name="main_btn_listar">Listar</string>
    <string name="title_activity_cadastro_livro">CadastroLivroActivity</string>
    <string name="cadastro_livro_lbl_isbn">ISBN: </string>
    <string name="cadastro_livro_lbl_titulo">Título: </string>
    <string name="cadastro_livro_lbl_autor" tools:ignore="Typos">Autor: </string>
    <string name="cadastro_livro_lbl_ano">Ano: </string>
    <string name="cadastro_livro_btn_salvar">Salvar</string>
    <string name="cadastro_livro_btn_excluir">Excluir</string>
    
</resources>
