<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifpi.lazaro.control.CadastroLivroActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_livro_lbl_isbn" />

    <EditText
        android:id="@+id/cadastro_livro_txt_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_livro_lbl_titulo" />

    <EditText
        android:id="@+id/cadastro_livro_txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_livro_lbl_autor" />

    <EditText
        android:id="@+id/cadastro_livro_txt_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_livro_lbl_ano" />

    <EditText
        android:id="@+id/cadastro_livro_txt_ano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        
        <Button
            android:id="@+id/cadastro_livro_btn_excluir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="exclui"
            android:text="@string/cadastro_livro_btn_excluir"
            tools:ignore="ButtonStyle"
            android:visibility="invisible" />
        
        <Button
            android:id="@+id/cadastro_livro_btn_salvar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="salva"
            android:text="@string/cadastro_livro_btn_salvar"
            tools:ignore="ButtonStyle" />
        
    </LinearLayout>

</LinearLayout>